@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC '-//W3C//DTD HTML 4.01 Transitional//EN'>
 <HTML><HEAD>
   <TITLE>imdb php classes test</TITLE>
-  <STYLE TYPE='text/css'>body,td,th { font-size:12px; }</STYLE>
+  <STYLE TYPE='text/css'>body,td,th { font-size:12px; font-family:sans-serif; }</STYLE>
 </HEAD><BODY>
 <FORM ACTION="imdbsearch.php" METHOD="get">
  <TABLE ALIGN="center" STYLE="margin-top:20px;border-collapse:collapse;" BORDER="1">
