@@ -6,6 +6,9 @@ v1.0.2
 + imdb_person: New method born() to retrieve birthdate and place
 + imdb_person: New method died() does the same for day of death (including
   cause, if available)
+* links to staff members on the demo imdb.php page now pointing to the new
+  imdb_person.php instead of the IMDB site to give insight into the new classes
+  capabilities
 
 v1.0.1 (07.05.2008)
 -------------------
